--- a/index.html
+++ b/index.html
@@ -29,8 +29,7 @@
                         <li class="nav-item"><a class="nav-link" href="#about">Sobre Mim</a></li>
                         <li class="nav-item"><a class="nav-link" href="#exp">Experiência</a></li>
                         <li class="nav-item"><a class="nav-link" href="#projects">Interesses</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#contato">Contato</a></li>
-                        
+                        <li class="nav-item"><a class="nav-link" href="#contato">Contato</a></li>s  
                     </ul>
                 </div>
             </div>
@@ -52,13 +51,13 @@
             <div class="container px-4 px-lg-5">
                 <div class="row gx-4 gx-lg-5 justify-content-center">
                     <div class="col-lg-8">
-                        <h2 class="text-white mb-4">Sobre Mim</h2>
+                        <h2 class="text-white mb-4">SOBRE MIM</h2>
                         <p class="text-white-50">
                             Prazer, me chamo Giovanni Caramello Grego.
                         </p>
                     </div>
                 </div>
-                <img class="img-fluid" src="assets/img/ipad.png" alt="..." />
+                <img class="img-fluid" src="assets/img/IMG_0443.JPG" alt="..." />
             </div>
         </section>
         <!-- Projects-->
@@ -66,10 +65,10 @@
             <div class="container px-4 px-lg-5">
                 <!-- Featured Project Row-->
                 <div class="row gx-0 mb-4 mb-lg-5 align-items-center">
-                    <div class="col-xl-8 col-lg-7"><img class="img-fluid mb-3 mb-lg-0" src="assets/img/bg-masthead.jpg" alt="..." /></div>
+                    <div class="col-xl-8 col-lg-7"><img class="img-fluid mb-3 mb-lg-0" src="assets/img/IMG_0443.JPG" alt="..." /></div>
                     <div class="col-xl-4 col-lg-5">
                         <div class="featured-text text-center text-lg-left">
-                            <h4>Ainda sobre mim</h4>
+                            <h4>AINDA SOBRE MIM</h4>
                             <p class="text-black-50 mb-0">tenho 16 anos e atualmente sou aluno na ETEC Professora Maria Cristina Medeiros onde eu faço parte do curso de Informática para Internet. Estudo instrumentos musicais por conta própria. Gosto de Esportes.</p>
                         </div>
                     </div>
@@ -77,13 +76,13 @@
                 <!-- Project One Row-->
                 <section class="projects-section bg-light" id="exp"></section>
                 <div class="row gx-0 mb-5 mb-lg-0 justify-content-center">
-                    <div class="col-lg-6"><img class="img-fluid" src="assets/img/demo-image-01.jpg" alt="..." /></div>
+                    <div class="col-lg-6"><img class="img-fluid" src="assets/img/IMG_0443.JPG" alt="..." /></div>
                     <div class="col-lg-6">
                         <div class="bg-black text-center h-100 project">
                             <div class="d-flex h-100">
                                 <div class="project-text w-100 my-auto text-center text-lg-left">
-                                    <h4 class="text-white">Experiência</h4>
-                                    <p class="mb-0 text-white-50">Sou um de grande amante de PhotoShop, banco de dados, instrumentos musicais e tenho inglês intermediário.</p>
+                                    <h4 class="text-white">EXPERIÊNCIA</h4>
+                                    <p class="mb-0 text-white-50">Sou um de grande amante de PhotoShop, banco de dados, instrumentos musicais e possuo inglês intermediário.</p>
                                     <hr class="d-none d-lg-block mb-0 ms-0" />
                                 </div>
                             </div>
@@ -93,13 +92,13 @@
                 <!-- Project Two Row-->
                 <section class="projects-section bg-light" id="projects"></section>
                 <div class="row gx-0 justify-content-center">
-                    <div class="col-lg-6"><img class="img-fluid" src="assets/img/demo-image-02.jpg" alt="..." /></div>
+                    <div class="col-lg-6"><img class="img-fluid" src="assets/img/IMG_0443.JPG" alt="..." /></div>
                     <div class="col-lg-6 order-lg-first">
                         <div class="bg-black text-center h-100 project">
                             <div class="d-flex h-100">
                                 <div class="project-text w-100 my-auto text-center text-lg-right">
-                                    <h4 class="text-white">Interesses</h4>
-                                    <p class="mb-0 text-white-50">gostaria estar trabalhando em alguma empresa/loja para assim, ganhar experiência no ramo. </p>
+                                    <h4 class="text-white">INTERESSES</h4>
+                                    <p class="mb-0 text-white-50">gostaria de começar a trabalhar em alguma loja/empresa de instrumentos musicais e gerais. </p>
                                     <hr class="d-none d-lg-block mb-0 me-0" />
                                 </div>
                             </div>
@@ -114,51 +113,16 @@
                 <div class="row gx-4 gx-lg-5">
                     <div class="col-md-10 col-lg-8 mx-auto text-center">
                         <i class="far fa-paper-plane fa-2x mb-2 text-white"></i>
-                        <h2 class="text-white mb-5">Contate-me!</h2>
-                        <!-- * * * * * * * * * * * * * * *-->
-                        <!-- * * SB Forms Contact Form * *-->
-                        <!-- * * * * * * * * * * * * * * *-->
-                        <!-- This form is pre-integrated with SB Forms.-->
-                        <!-- To make this form functional, sign up at-->
-                        <!-- https://startbootstrap.com/solution/contact-forms-->
-                        <!-- to get an API token!-->
-                        <form class="form-signup" id="contactForm" data-sb-form-api-token="API_TOKEN">
-                            <!-- Email address input-->
-                            <div class="row input-group-newsletter">
-                                <div class="col"><input class="form-control" id="emailAddress" type="email" placeholder="Entre com o seu email..." aria-label="Entre com o seu email.." data-sb-validations="required,email" /></div>
-                                <div class="col-auto"><button class="btn btn-primary disabled" id="submitButton" type="submit">Enviar!</button></div>
-                            </div>
-                            <div class="invalid-feedback mt-2" data-sb-feedback="emailAddress:required">precisa de um email.</div>
-                            <div class="invalid-feedback mt-2" data-sb-feedback="emailAddress:email">Email não válido.</div>
-                            <!-- Submit success message-->
-                            <!---->
-                            <!-- This is what your users will see when the form-->
-                            <!-- has successfully submitted-->
-                            <div class="d-none" id="submitSuccessMessage">
-                                <div class="text-center mb-3 mt-2 text-white">
-                                    <div class="fw-bolder">sucesso!</div>
-                                    <a href="https://startbootstrap.com/solution/contact-forms">https://startbootstrap.com/solution/contact-forms</a>
-                                </div>
-                            </div>
-                            <!-- Submit error message-->
-                            <!---->
-                            <!-- This is what your users will see when there is-->
-                            <!-- an error submitting the form-->
-                            <div class="d-none" id="submitErrorMessage"><div class="text-center text-danger mb-3 mt-2">error!</div></div>
-                        </form>
-                    </div>
-                </div>
-            </div>
-        </section>
+                        <h2 class="text-white mb-5">CONTATE-ME!</h2>
         <!-- Contact-->
-        <section class="contact-section bg-black">
             <div class="container px-4 px-lg-5">
                 <div class="row gx-4 gx-lg-5">
                     <div class="col-md-4 mb-3 mb-md-0">
                         <div class="card py-4 h-100">
                             <div class="card-body text-center">
                                 <i class="fas fa-map-marked-alt text-primary mb-2"></i>
-                                <h4 class="text-uppercase m-0">Localização</h4>
+                                <h4 class="text-uppercase m-0">
+                                    Localização</h4>
                                 <hr class="my-4 mx-auto" />
                                 <div class="small text-black-50">Rua Guatapará 98a, Ribeirão Pires, SP, Brasil.</div>
                             </div>
@@ -170,7 +134,7 @@
                                 <i class="fas fa-envelope text-primary mb-2"></i>
                                 <h4 class="text-uppercase m-0">Email</h4>
                                 <hr class="my-4 mx-auto" />
-                                <div class="small text-black-50"><a href="#!">giovannicaramello@icloud.com</a></div>
+                                <div class="small text-black-50"><a href="giovannicaramello@icloud.com">giovannicaramello@icloud.com</a></div>
                             </div>
                         </div>
                     </div>
