--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                         </p>
                     </div>
                 </div>
-                <img class="img-fluid" src="assets/img/IMG_0443.JPG" alt="..." />
+                <img class="img-fluid" src="assets/img/Image(2).jpeg" alt="..." />
             </div>
         </section>
         <!-- Projects-->
@@ -65,7 +65,7 @@
             <div class="container px-4 px-lg-5">
                 <!-- Featured Project Row-->
                 <div class="row gx-0 mb-4 mb-lg-5 align-items-center">
-                    <div class="col-xl-8 col-lg-7"><img class="img-fluid mb-3 mb-lg-0" src="assets/img/IMG_0443.JPG" alt="..." /></div>
+                    <div class="col-xl-8 col-lg-7"><img class="img-fluid mb-3 mb-lg-0" src="assets/img/Image(4).jpeg" alt="..." /></div>
                     <div class="col-xl-4 col-lg-5">
                         <div class="featured-text text-center text-lg-left">
                             <h4>AINDA SOBRE MIM</h4>
@@ -76,13 +76,18 @@
                 <!-- Project One Row-->
                 <section class="projects-section bg-light" id="exp"></section>
                 <div class="row gx-0 mb-5 mb-lg-0 justify-content-center">
-                    <div class="col-lg-6"><img class="img-fluid" src="assets/img/IMG_0443.JPG" alt="..." /></div>
+                    <!-- Button trigger modal -->
+                    <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#staticBackdrop">
+                        Competências Socioemocionais 
+                            </button>
+                    <div class="col-lg-6"><img class="img-fluid" src="assets/img/Image(1).jpeg" alt="..." /></div>
+                    
                     <div class="col-lg-6">
                         <div class="bg-black text-center h-100 project">
                             <div class="d-flex h-100">
                                 <div class="project-text w-100 my-auto text-center text-lg-left">
                                     <h4 class="text-white">EXPERIÊNCIA</h4>
-                                    <p class="mb-0 text-white-50">Sou um de grande amante de PhotoShop, banco de dados, instrumentos musicais e possuo inglês intermediário.</p>
+                                    <p class="mb-0 text-white-50">Sou um de grande amante de PhotoShop, banco de dados, instrumentos musicais, possuo inglês intermediário e sou um bom comunicador.</p>
                                     <hr class="d-none d-lg-block mb-0 ms-0" />
                                 </div>
                             </div>
@@ -92,7 +97,7 @@
                 <!-- Project Two Row-->
                 <section class="projects-section bg-light" id="projects"></section>
                 <div class="row gx-0 justify-content-center">
-                    <div class="col-lg-6"><img class="img-fluid" src="assets/img/IMG_0443.JPG" alt="..." /></div>
+                    <div class="col-lg-6"><img class="img-fluid" src="assets/img/Image(3).jpeg" alt="..." /></div>
                     <div class="col-lg-6 order-lg-first">
                         <div class="bg-black text-center h-100 project">
                             <div class="d-flex h-100">
@@ -124,7 +129,7 @@
                                 <h4 class="text-uppercase m-0">
                                     Localização</h4>
                                 <hr class="my-4 mx-auto" />
-                                <div class="small text-black-50">Rua Guatapará 98a, Ribeirão Pires, SP, Brasil.</div>
+                                <div class="small text-black-50">Rua Guatapará 98A, Ribeirão Pires, SP, Brasil.</div>
                             </div>
                         </div>
                     </div>
@@ -152,6 +157,24 @@
         </section>
         <!-- Footer-->
         <footer class="footer bg-black small text-center text-white-50"><div class="container px-4 px-lg-5">Copyright &copy; Giovanni Caramello Grego ┆ 2022 ┆</div></footer>
+        <!-- Modal -->
+<div class="modal fade" id="staticBackdrop" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="staticBackdropLabel">Modal title</h5>
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+        </div>
+        <div class="modal-body">
+          ...
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-primary" data-bs-dismiss="modal">fechar</button>
+          
+        </div>
+      </div>
+    </div>
+  </div>
         <!-- Bootstrap core JS-->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
         <!-- Core theme JS-->
