--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                         <li class="nav-item"><a class="nav-link" href="#about">Sobre Mim</a></li>
                         <li class="nav-item"><a class="nav-link" href="#exp">Experiência</a></li>
                         <li class="nav-item"><a class="nav-link" href="#projects">Interesses</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#contato">Contato</a></li>s  
+                        <li class="nav-item"><a class="nav-link" href="#contato">Contato</a></li>
                     </ul>
                 </div>
             </div>
@@ -57,7 +57,7 @@
                         </p>
                     </div>
                 </div>
-                <img class="img-fluid" src="assets/img/Image(2).jpeg" alt="..." />
+               
             </div>
         </section>
         <!-- Projects-->
@@ -69,7 +69,7 @@
                     <div class="col-xl-4 col-lg-5">
                         <div class="featured-text text-center text-lg-left">
                             <h4>AINDA SOBRE MIM</h4>
-                            <p class="text-black-50 mb-0">tenho 16 anos e atualmente sou aluno na ETEC Professora Maria Cristina Medeiros onde eu faço parte do curso de Informática para Internet. Estudo instrumentos musicais por conta própria. Gosto de Esportes.</p>
+                            <p class="text-black-50 mb-0">TENHO 16 ANOS E ATUALMENTE SOU ALUNO NA ETEC PROFESSORA MARIA CRISTINA MEDEIROS ONDE EU FAÇO PARTE DO CURSO DE INFORMÁTICA PARA INTERNET. ESTUDO INSTRUMENTOS MUSICAIS POR CONTA PRÓPRIA. GOSTO DE ESPORTES.</p>
                         </div>
                     </div>
                 </div>
@@ -87,7 +87,7 @@
                             <div class="d-flex h-100">
                                 <div class="project-text w-100 my-auto text-center text-lg-left">
                                     <h4 class="text-white">EXPERIÊNCIA</h4>
-                                    <p class="mb-0 text-white-50">Sou um de grande amante de PhotoShop, banco de dados, instrumentos musicais, possuo inglês intermediário e sou um bom comunicador.</p>
+                                    <p class="mb-0 text-white-50">SOU UM DE GRANDE AMANTE DE PHOTOSHOP, BANCO DE DADOS, INSTRUMENTOS MUSICAIS, POSSUO INGLÊS INTERMEDIÁRIO E SOU UM BOM COMUNICADOR.</p>
                                     <hr class="d-none d-lg-block mb-0 ms-0" />
                                 </div>
                             </div>
@@ -103,7 +103,7 @@
                             <div class="d-flex h-100">
                                 <div class="project-text w-100 my-auto text-center text-lg-right">
                                     <h4 class="text-white">INTERESSES</h4>
-                                    <p class="mb-0 text-white-50">gostaria de começar a trabalhar em alguma loja/empresa de instrumentos musicais e gerais. </p>
+                                    <p class="mb-0 text-white-50">GOSTARIA DE COMEÇAR A TRABALHAR EM ALGUMA LOJA/EMPRESA DE INSTRUMENTOS MUSICAIS E GERAIS. </p>
                                     <hr class="d-none d-lg-block mb-0 me-0" />
                                 </div>
                             </div>
@@ -166,7 +166,19 @@
           <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
         </div>
         <div class="modal-body">
-          ...
+                <h1> Minhas Competências Socioemocionais </h1>
+                <h2>AUTOGESTÃO</h2>
+                <P>FOCO, RESPONSABILIDADE, DETERMINAÇÃO E ORGANIZAÇÃO.</P>
+                <h2>ENGAJAMENTO COM OS OUTROS</h2>
+                <P>ENTUSIASMO.</P>
+                <h2>AMABILIDADE</h2>
+                <P>CONFIANÇA E RESPEITO.</P>
+                <h2>RESILIÊNCIA EMOCIONAL</h2>
+                <P>AUTOCONFIANÇA E TOLERÂNCIA AO ESTRESSE.</P>
+                <h2>ABERTURA AO NOVO</h2>
+                <P>INTERESSE ARTÍSTICO E CURIOSIDADE PARA APRENDER.</P>
+
+                
         </div>
         <div class="modal-footer">
           <button type="button" class="btn btn-primary" data-bs-dismiss="modal">fechar</button>
