--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
             </div>
         </header>
         <!-- About-->
+        <div class="bg-black text-center h-100 project"></div>
         <section class="about-section text-center" id="about">
             <div class="container px-4 px-lg-5">
                 <div class="row gx-4 gx-lg-5 justify-content-center">
@@ -74,28 +75,30 @@
                     </div>
                 </div>
                 <!-- Project One Row-->
-                <section class="projects-section bg-light" id="exp"></section>
+                <section class="projects-section bg-light" id="exp">
                 <div class="row gx-0 mb-5 mb-lg-0 justify-content-center">
                     <!-- Button trigger modal -->
                     <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#staticBackdrop">
                         Competências Socioemocionais 
                             </button>
-                    <div class="col-lg-6"><img class="img-fluid" src="assets/img/Image(1).jpeg" alt="..." /></div>
-                    
+                    <div class="col-lg-6">
+                        <img class="img-fluid" src="assets/img/Image(1).jpeg" alt="..." /></div>
                     <div class="col-lg-6">
                         <div class="bg-black text-center h-100 project">
                             <div class="d-flex h-100">
                                 <div class="project-text w-100 my-auto text-center text-lg-left">
                                     <h4 class="text-white">EXPERIÊNCIA</h4>
                                     <p class="mb-0 text-white-50">SOU UM DE GRANDE AMANTE DE PHOTOSHOP, BANCO DE DADOS, INSTRUMENTOS MUSICAIS, POSSUO INGLÊS INTERMEDIÁRIO E SOU UM BOM COMUNICADOR.</p>
-                                    <hr class="d-none d-lg-block mb-0 ms-0" />
+                                    <hr class="d-none d-lg-block mb-0 ms-0"/>
+                                    
                                 </div>
                             </div>
                         </div>
                     </div>
                 </div>
+            </section>
                 <!-- Project Two Row-->
-                <section class="projects-section bg-light" id="projects"></section>
+                <section class="projects-section bg-light" id="projects">
                 <div class="row gx-0 justify-content-center">
                     <div class="col-lg-6"><img class="img-fluid" src="assets/img/Image(3).jpeg" alt="..." /></div>
                     <div class="col-lg-6 order-lg-first">
@@ -103,7 +106,7 @@
                             <div class="d-flex h-100">
                                 <div class="project-text w-100 my-auto text-center text-lg-right">
                                     <h4 class="text-white">INTERESSES</h4>
-                                    <p class="mb-0 text-white-50">GOSTARIA DE COMEÇAR A TRABALHAR EM ALGUMA LOJA/EMPRESA DE INSTRUMENTOS MUSICAIS E GERAIS. </p>
+                                    <p class="mb-0 text-white-50">GOSTARIA DE COMEÇAR A TRABALHAR EM ALGUMA LOJA/EMPRESA DE INSTRUMENTOS MUSICAIS E GERAIS OU EM QUALQUER LUGAR. </p>
                                     <hr class="d-none d-lg-block mb-0 me-0" />
                                 </div>
                             </div>
@@ -162,7 +165,7 @@
     <div class="modal-dialog">
       <div class="modal-content">
         <div class="modal-header">
-          <h5 class="modal-title" id="staticBackdropLabel">Modal title</h5>
+          <h5 class="modal-title" id="staticBackdropLabel"></h5>
           <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
         </div>
         <div class="modal-body">
